src/envoy/http/data_trace_logger/data_trace_logger.yaml
node:
  cluster: some-service

admin:
    access_log_path: /dev/null
    address:
      socket_address: { address: 127.0.0.1, port_value: 8001 }
  
static_resources:
    listeners:
    - name: listener_0
      address:
        socket_address: { address: 127.0.0.1, port_value: 8080 }
      traffic_direction: INBOUND
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            generate_request_id: true
            tracing:
              provider:
                name: envoy.tracers.zipkin
                typed_config:
                  "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
                  collector_cluster: jaeger
                  collector_endpoint: "/api/v2/spans"
                  shared_span_context: false
                  collector_endpoint_version: HTTP_JSON
            stat_prefix: ingress_http
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/" }
                  route: { cluster: some_service }
                  decorator: { operation: someOperation }
            http_filters:
            - name: data_trace_logger
            - name: envoy.filters.http.router
    clusters:
    - name: some_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: some_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8088
    - name: jaeger
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: jaeger
        endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9411
